--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<h1>Tic-Tac-Toe</h1>
 	<h2 id="message">Message</h2>
+	<button id="reset-button"> reset </button>
 
 	<section class="board">
 		<div id="sq0" class = "squares"></div>
@@ -22,6 +23,6 @@
 		<div id="sq6" class = "squares"></div>
 		<div id="sq7" class = "squares"></div>
 		<div id="sq8" class = "squares"></div>
-	</section>    
+	</section>  
 </body>
 </html>
